--- a/src/components/dashjs-player/dashjs-player.css
+++ b/src/components/dashjs-player/dashjs-player.css
@@ -1,3 +1,10 @@
 :host {
   display: block;
 }
+
+#myMainVideoPlayer {
+  margin-left: auto;
+  margin-right: auto;
+  display:block;
+  width: 100%;
+}
