--- a/src/components/dashjs-api-control/dashjs-api-control.css
+++ b/src/components/dashjs-api-control/dashjs-api-control.css
@@ -1,15 +1,13 @@
 :host {
   display: block;
 }
-
-ion-button {
-  text-transform:none;
+.inline-toggle{
+  --inner-border-width: 0 0 0 0;
+  display:inline-block;
+  vertical-align: middle;
 }
 
-.noBorder{
---inner-border-width: 0 0 0 0;
-}
 
-.reduced_margin{
-margin-left: 5px;
+.no-wrap {
+  white-space: nowrap;
 }
