responsive video-player, scrollable html,body, url state, hooks (#22)

--- a/src/components/dashjs-player/dashjs-player.css
+++ b/src/components/dashjs-player/dashjs-player.css
@@ -1,3 +1,14 @@
 :host {
-  display: block;
+  display: inline;
+}
+
+.player-wrapper {
+  display: flex;
+  justify-content: center;
+  margin: 30px 10px;
+}
+
+video {
+  max-width: 100%;
+  height: auto;
 }
