add updatable settings

--- a/src/app.scss
+++ b/src/app.scss
@@ -11,7 +11,7 @@
 
 // Add global styles here (which should be applied to the page.
 // DO NOT add styles which apply to components!
-html,body{overflow-y: scroll; }
+// html,body{overflow-y: scroll; }
 
 .browse-settings-modal .modal-wrapper {
   min-height: 90vh;
