--- a/src/components/dashjs-api-control/dashjs-api-control.css
+++ b/src/components/dashjs-api-control/dashjs-api-control.css
@@ -11,3 +11,9 @@
 .no-wrap {
   white-space: nowrap;
 }
+
+.action-sheet-wrapper {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 80%;
+}
