Feat/apicontrol statistics (#17)
* add ionic framework and component skeletons

resolves #13

* add ui link

* progressing

* player watch updated

* cleaned node_modules

* onclick events added

* player communication established

* stream select update

Co-authored-by: DanielHabenicht <daniel-habenicht@outlook.de>
Co-authored-by: Huy Viet Nguyen <huy.v.nguyen@campus.tu-berlin.de>

--- a/src/components/dashjs-statistics/dashjs-statistics.css
+++ b/src/components/dashjs-statistics/dashjs-statistics.css
@@ -1,3 +1,33 @@
 :host {
   display: block;
 }
+
+:root {
+  --ion-safe-area-top: 20px;
+  --ion-safe-area-bottom: 22px;
+}
+.inline-item{
+  display: inline-block;
+  max-width: 50%;
+  --inner-border-width: 0 0 0 0;
+}
+
+.r-border ion-col:first-child {
+  border-right: 1px solid #E9E9E9;
+}
+
+.centered-header {
+  border-bottom: 1px solid #E9E9E9;
+  padding-bottom: 12px;
+}
+
+.rmv-b-border {
+  border-bottom: 0;
+}
+
+.display {
+  display: block;
+  width: 100%;
+  min-height: 200px;
+}
+
