--- a/src/components/dashjs-api-control/dashjs-api-control.css
+++ b/src/components/dashjs-api-control/dashjs-api-control.css
@@ -1,3 +1,21 @@
 :host {
   display: block;
 }
+
+.inline-toggle{
+  --inner-border-width: 0 0 0 0;
+  display:inline-block;
+  vertical-align: middle;
+}
+
+
+.no-wrap {
+  white-space: nowrap;
+}
+
+.action-sheet-wrapper {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 80%;
+}
+
