--- a/src/components/dashjs-player/dashjs-player.css
+++ b/src/components/dashjs-player/dashjs-player.css
@@ -12,3 +12,10 @@ video {
   max-width: 100%;
   height: auto;
 }
+
+#myMainVideoPlayer {
+  margin-left: auto;
+  margin-right: auto;
+  display:block;
+  width: 100%;
+}
