make settings component better
resolve settings component refinement #33

--- a/src/components/dashjs-settings-control-element/dashjs-settings-control-element.css
+++ b/src/components/dashjs-settings-control-element/dashjs-settings-control-element.css
@@ -1,3 +1,10 @@
 :host {
   display: block;
+  --ion-grid-padding: 0px;
+  --ion-grid-column-padding: 0px;
+}
+
+ion-col {
+  display: flex;
+  align-items: center;
 }
