fix search popover

--- a/src/app.scss
+++ b/src/app.scss
@@ -17,3 +17,10 @@
   min-height: 90vh;
   min-width: 90vw;
 }
+
+// Fix the Settings Search popover beeing to small
+.settings-search-popover {
+  .popover-content {
+    --width: 450px;
+  }
+}
