added local storage functionality

--- a/src/components/dashjs-api-control-element/dashjs-api-control-element.css
+++ b/src/components/dashjs-api-control-element/dashjs-api-control-element.css
@@ -1,3 +1,14 @@
 :host {
   display: block;
 }
+
+.middle {
+  display: table-cell;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.gap {
+  width: 15px;
+}
+
