--- a/src/components/dashjs-api-control-element/dashjs-api-control-element.css
+++ b/src/components/dashjs-api-control-element/dashjs-api-control-element.css
@@ -2,6 +2,11 @@
   display: block;
 }
 
+ion-button {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 .middle {
   display: table-cell;
   margin-top: auto;
@@ -12,3 +17,7 @@
   width: 15px;
 }
 
+
+ion-item {
+  --min-height: 0;
+}
