--- a/src/components/contrib/controlbar.scss
+++ b/src/components/contrib/controlbar.scss
@@ -1,25 +1,3 @@
-:host {
-  display: inline;
-}
-
-.player-wrapper {
-  display: flex;
-  justify-content: center;
-  margin: 0 10px;
-}
-
-video {
-  max-width: 100%;
-  height: auto;
-}
-
-#myMainVideoPlayer {
-  margin-left: auto;
-  margin-right: auto;
-  display: block;
-  width: 100%;
-}
-
 /**************************************************/
 /*Control bar*/
 /**************************************************/
@@ -168,7 +146,7 @@ video {
 
 @font-face {
   font-family: 'icomoon';
-  src: url('../contrib/icomoon.ttf') format('truetype');
+  src: url('./icomoon.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
