--- a/src/components/dashjs-api-control/dashjs-api-control.css
+++ b/src/components/dashjs-api-control/dashjs-api-control.css
@@ -18,3 +18,10 @@
   margin-right: auto;
   max-width: 80%;
 }
+
+.bottom-border {
+  margin-left: 5px !important;
+  margin-right: 5px !important;
+  border-bottom: 1px solid;
+  border-color: rgb(0,0,0,0.2);
+}
