added local storage functionality (#46)
* added local storage functionality

* removed unused

* remove 3 console logs

* up

* final update

* remove unused import

* removing console.log

* initial player load

* changes

* updated api controller

* fix add api calls

* removed console logs

Co-authored-by: Huy Viet Nguyen <huy.v.nguyen@campus.tu-berlin.de>

--- a/src/components/dashjs-api-control-element/dashjs-api-control-element.css
+++ b/src/components/dashjs-api-control-element/dashjs-api-control-element.css
@@ -1,3 +1,30 @@
 :host {
   display: block;
+  --ion-grid-padding: 0px; 
+   --ion-grid-column-padding: 0px; 
+}
+
+
+
+ion-col { 
+  display: flex; 
+  align-items: center; 
+} 
+
+.gap {
+  width: 15px;
+}
+
+ion-item {
+  --min-height: 0;
+}
+
+.input-border {
+  border: 1px solid;
+  border-radius: 64px;
+  border-color: rgb(0,0,0,0.2);
+  --padding-top: 5px !important;
+  --padding-bottom: 5px !important;
+  --padding-start: 10px !important;
+  --padding-end: 10px !important;
 }
