--- a/src/components/dashjs-player/dashjs-player.scss
+++ b/src/components/dashjs-player/dashjs-player.scss
@@ -1,3 +1,5 @@
+@import '../contrib/controlbar.scss';
+
 :host {
   display: inline;
 }
@@ -5,7 +7,7 @@
 .player-wrapper {
   display: flex;
   justify-content: center;
-  margin: 30px 10px;
+  margin: 0 10px;
 }
 
 video {
@@ -16,6 +18,6 @@ video {
 #myMainVideoPlayer {
   margin-left: auto;
   margin-right: auto;
-  display:block;
+  display: block;
   width: 100%;
 }
