--- a/src/components/dashjs-settings-control-element/dashjs-settings-control-element.css
+++ b/src/components/dashjs-settings-control-element/dashjs-settings-control-element.css
@@ -8,3 +8,13 @@ ion-col {
   display: flex;
   align-items: center;
 }
+
+.input-border {
+  border: 1px solid;
+  border-radius: 64px;
+  border-color: rgb(0, 0, 0, 0.2);
+  --padding-top: 5px !important;
+  --padding-bottom: 5px !important;
+  --padding-start: 10px !important;
+  --padding-end: 10px !important;
+}
