refactor player and resolve lint errors

--- a/src/components/dashjs-player/controlbar.scss
+++ b/src/components/dashjs-player/controlbar.scss
@@ -146,7 +146,7 @@
 
 @font-face {
   font-family: 'icomoon';
-  src: url('/static/icomoon.ttf') format('truetype');
+  src: url('/build/assets/icomoon.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
